# icloud

./: README.md  requirements.txt  setup.cfg  setup.py  test.py
docs/: .buildinfo  genindex.html  index.html  kabbes_icloud.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/kabbes_icloud/: AttributeOption.html  AttributeOptions.html  Connection.html  ICloudContact.html  ICloudContacts.html
docs/_sources/: index.rst.txt  kabbes_icloud.rst.txt  modules.rst.txt
src/kabbes_icloud/: AttributeOption.py  AttributeOptions.py  CONFIG.json  Client.py  Connection.py  ICloudContact.py  ICloudContacts.py  __init__.py  __main__.py  iCloud_Contacts.py  icloud_params.py  icloud_support_functions.py  main.py
src/sadf/: __main__.py
