[metadata]
name = kabbes_icloud
version = 0.1.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Python connection to iCloud
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-icloud/
project_urls =
    GitHub = https://github.com/jameskabbes/icloud
    Documentation = https://jameskabbes.github.io/icloud
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src